--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.4",
     "@supabase/supabase-js": "^2.47.10",
+    "@uppy/core": "^4.3.1",
+    "@uppy/dashboard": "^4.1.3",
+    "@uppy/drag-drop": "^4.0.5",
+    "@uppy/file-input": "^4.0.4",
+    "@uppy/progress-bar": "^4.1.0",
+    "@uppy/react": "^4.0.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
