--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@uppy/file-input": "^4.0.4",
     "@uppy/progress-bar": "^4.1.0",
     "@uppy/react": "^4.0.4",
+    "@uppy/tus": "^4.1.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
